Fixed width issue on mobile

--- a/frontend/src/slideshow/SlideShow.scss
+++ b/frontend/src/slideshow/SlideShow.scss
@@ -3,8 +3,8 @@
 
 .slideshow {
 
-    max-width: 100%;
-    width: 100%;
+    max-width: 80vw;
+    // width: 100%;
 
     & > img, & > iframe {
         max-width: 100%;
@@ -18,6 +18,7 @@
         flex-direction: row;
         flex-wrap: nowrap;
         overflow-x: scroll;
+        max-width: 100%;
 
         .thumbnail {
 
